# seed

./: .gitignore  CMakeLists.txt  README.md
docs/: 02-parser-ast.md  03-interpreter.md  04-static-semantics.md  05-ir-bytecode.md  06-vm-gc.md  07-aot-arm64.md  08-llvm-jit.md  README.md  cpp-code-walkthrough.md  diagrams.md
examples/: hello.seed
java/: pom.xml
java/src/main/java/com/seed/ast/: AstPrinter.java  Expr.java  Stmt.java
java/src/main/java/com/seed/bytecode/: Compiler.java  Function.java  Instr.java  Module.java  Opcode.java  TextWriter.java  Verifier.java
java/src/main/java/com/seed/cli/: AstDump.java  BytecodeDump.java  Check.java  Compile.java  LexDump.java  Run.java
java/src/main/java/com/seed/interp/: Environment.java  Interpreter.java  Return.java  Value.java
java/src/main/java/com/seed/lexer/: Lexer.java  Token.java  TokenType.java
java/src/main/java/com/seed/parser/: ParseError.java  Parser.java
java/src/main/java/com/seed/sema/: Diagnostic.java  Resolver.java  Symbol.java
java/src/test/java/com/seed/bytecode/: CompilerTest.java
java/src/test/java/com/seed/interp/: InterpreterTest.java
java/src/test/java/com/seed/lexer/: LexerTest.java
java/src/test/java/com/seed/parser/: ParserTest.java
java/src/test/java/com/seed/sema/: ResolverTest.java
scripts/: disasm.sh  docs_patch.sh
src/cpp/: CMakeLists.txt
src/cpp/apps/: seedc.cpp  seeddasm.cpp  seedjit.cpp  seedvm.cpp
src/cpp/codegen/: a64_emit.cpp  llvm_jit.cpp
src/cpp/runtime/: runtime.cpp
src/cpp/vm/: gc.cpp  loader.cpp  vm.cpp  vm_exec.cpp
src/include/seed/: bytecode.h  gc.h  value.h  vm.h
src/include/seed/codegen/: a64.h  llvm_jit.h
tests/cpp/: CMakeLists.txt  test_sanity.cpp
